Projeto/Compilador/tests/cases/error/T3.pas
program T3;
var
  v: array[5..1] of integer;
begin
end.
